# obd2

./: .gitignore  Cargo.toml  rust-toolchain.toml  typescript  vscode.code-workspace
.cargo/: config.toml  run.sh
.devcontainer/: Dockerfile  devcontainer.json
ble/: rust-toolchain.toml
crates/statig/gitold/: FETCH_HEAD  packed-refs
docs/: .~lock.0_Niro_PIDs_final.ods#  0_Niro_PIDs_final.ods  PIDs.md  README.md  TODO.md
firmware/: Cargo.toml  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: cap1188.rs  debug.rs  hal.rs  locks.rs  main.rs  obd2.rs  power.rs  types.rs
firmware/src/display/: mod.rs  task.rs
firmware/src/mcp2515/: bitrates.rs  config.rs  mod.rs
firmware/src/pid/: ac.rs  bms.rs  gearbox_gear.rs  ice_engine.rs  ice_fuel_rate.rs  ice_temperature.rs  icu.rs  mod.rs  transaxle.rs  vehicle_speed.rs
firmware/src/tasks/: buttons.rs  ieee802154.rs  lcd.rs  led.rs  mod.rs  obd2.rs  power.rs  state.rs  usb.rs
ha-daemon/: .gitignore  Cargo.toml
ha-daemon/src/: client.rs  config.rs  daemon.rs  db.rs  kia.rs  main.rs  prelude.rs  rpc.rs  rpc_server.rs  sensor.rs
ha-daemon/src/ha/: auth.rs  device.rs  mod.rs  old.rs  ws.rs
ieee802154-bridge/: Cargo.toml
ieee802154-bridge/.cargo/: config.toml
ieee802154-bridge/src/: main.rs
lte-modem/: Cargo.toml  Embed.toml  build.rs  memory.x  rust-toolchain.toml
lte-modem/.cargo/: config.toml  run.sh
lte-modem/src/: config.rs  led.rs  main.rs
lte-modem/src/board/: adp5360.rs  adxl362.rs  adxl372.rs  bh1749nuc.rs  button.rs  buzzer.rs  destruct_twim.rs  gnss.rs  mod.rs  modem.rs  rgb.rs  wdg.rs
lte-modem/src/tasks/: battery.rs  button.rs  display.rs  external_gnss.rs  gnss.rs  logger.rs  mod.rs  montion_detection.rs  reset.rs  state.rs  uarte.rs
lte-modem/src/tasks/modem/: link.rs  mod.rs  persistent.rs  send.rs  sms.rs  stats.rs
obd2-dashboard/: Cargo.toml  attach.sh  build.rs  deep-sleep-stuck  expand.rs  memory.x  memory.x.old  pulseview  rust-toolchain.toml  rustfmt.toml
obd2-dashboard/.cargo/: config.toml  run.sh
obd2-dashboard/crates/sh1122/src/: config.rs
obd2-dashboard/crates/sh1122/src/async_display/: mod.rs
obd2-dashboard/crates/sh1122/src/display/: mod.rs
obd2-dashboard/crates/sh1122/src/mode/: mod.rs  terminal.rs
obd2-dashboard/crates/sh1122_old/: Cargo.toml  README.md
obd2-dashboard/crates/sh1122_old/src/: command.rs  lib.rs
obd2-dashboard/crates/sh1122_old/src/async_display/: buffered_graphics.rs
obd2-dashboard/crates/sh1122_old/src/mode/: buffered_graphics.rs
obd2-dashboard/crates/statig/gitold/: config
obd2-dashboard/crates/statig/gitold/refs/heads/: main
obd2-dashboard/crates/statig/statig/: Cargo.toml
obd2-dashboard/crates/statig/statig/src/awaitable/: superstate.rs
obd2-dashboard/src/: cap1188.rs  event.rs  hal.rs  main.rs  obd2.rs  power.rs  prelude.rs  types.rs
obd2-dashboard/src/display/widgets/: arrow.rs  battery.rs  battery_12v.rs  connection.rs  debug.rs  fuel.rs  gearbox_gear.rs  grid.rs  humidity.rs  ice_fuel_rate.rs  icon.rs  mod.rs  motor_electric.rs  motor_ice.rs  obd2_debug_selector.rs  on_board_charger.rs  position.rs  power.rs  slider.rs  temperature.rs  text.rs  value.rs
obd2-dashboard/src/mcp2515/: bitrates.rs  config.rs  idheader.rs  mod.rs  registers.rs
obd2-dashboard/src/pid/: ac.rs  bms.rs  hybrid_dc_dc.rs  ice_engine.rs  ice_fuel_rate.rs  ice_temperature.rs  icu.rs  icu2.rs  icu3.rs  icu_smk_1.rs  mod.rs  on_board_charger.rs  transaxle.rs  vehicle_speed.rs
obd2-dashboard/src/tasks/: buttons.rs  can_listen.rs  ieee802154.rs  led.rs  mod.rs  obd2.rs  power.rs  state.rs  temperature.rs  usb.rs
obd2-dashboard/src/tasks/lcd/: ac.rs  boot.rs  charging.rs  debug.rs  main.rs  menu.rs  mod.rs  obd2_pids.rs  settings.rs
obd2-simulator/arudino/obd2_cobs_serial/: mcp2515v2.h  obd2_cobs_serial.ino  old.cpp
obd2-simulator/display/: Cargo.toml  expand.rs
obd2-simulator/display/.cargo/: config.toml  run.sh
obd2-simulator/display/ipc/: Cargo.toml
obd2-simulator/display/ipc/src/: lib.rs
obd2-simulator/display/server/: Cargo.toml  build.rs  obd2-dashboard
obd2-simulator/display/server/.cargo/: config.toml
obd2-simulator/display/server/src/: dummy_display.rs  ipc_client.rs  main.rs  types.rs
obd2-simulator/display/server/src/tasks/: buttons.rs  ieee802154.rs  obd2.rs
obd2-simulator/display/src/: hal.rs  main.rs
obd2-simulator/display/src/tasks/: ieee802154.rs  mod.rs  obd2.rs
obd2-simulator/display/ui/: Cargo.toml
obd2-simulator/display/ui/src/: ipc_server.rs  main.rs
obd2-simulator/host/configs/: ac.ron  basic.ron  bms.ron  ibu_bcm.ron  icu.ron  icu_smk.ron  obc.ron  transaxle.ron  vin.ron
obd2-simulator/host/src/: main.rs
pcap/: Cargo.toml  bms.pcap
pcap/src/: main.rs
pcb/: .gitignore
pcb/KIA-OBD2-DISPLAY/: .~lock.KIA-OBD2-DISPLAY.ods#  0154004.DR--3DModel-STEP-56544.STEP  CAP1188-1-CP-TR.STEP  D24V10F3.bak  KIA-OBD2-DISPLAY-B_Cu.dxf  KIA-OBD2-DISPLAY-Edge_Cuts.dxf  KIA-OBD2-DISPLAY.csv  KIA-OBD2-DISPLAY.kicad_dru  KIA-OBD2-DISPLAY.kicad_pcb  KIA-OBD2-DISPLAY.kicad_prl  KIA-OBD2-DISPLAY.kicad_pro  KIA-OBD2-DISPLAY.kicad_sch  KIA-OBD2-DISPLAY.ods  SH1122.kicad_sym  SH1122.step  SH1122_OLD.step  TJA1050--3DModel-STEP-269445.STEP  fp-info-cache  fp-lib-table  sym-lib-table
pcb/KIA-OBD2-DISPLAY/CAP1188/: CAP1188-1-CP-TR.kicad_sym  (+1 more)
scripts/: flash.sh
simulator/host/: Cargo.toml
simulator/host/configs/: ac.ron  ice_temperature.ron
simulator/host/src/: config.rs  main.rs
src/: cap1188.rs  defmt_serial.rs  event.rs  hal.rs  main.rs  obd2.rs  obd2v2.rs  power.rs  state.rs  types.rs
src/display/: mod.rs  task.rs
src/mcp2515/: bitrates.rs  frame.rs  idheader.rs  mod.rs  registers.rs
src/obd2/: dbc.rs  mod.rs  pids.rs  task.rs
src/obd2_old/: mod.rs  pids.rs  task.rs
src/pid/: bms.rs
src/tasks/: buttons.rs  lcd.rs  mod.rs  obd2.rs  power.rs  state.rs  usb.rs
test/: Cargo.toml
test/src/: main.rs
tracker/: Cargo.toml  memory.x  rust-toolchain.toml
tracker/.cargo/: config.toml
tracker/src/: config.rs  led.rs  main.rs
types/: Cargo.toml
types/src/: lib.rs  serializer.rs
(+107 files in other folders)
