[package]
name = "kia_obd2_esp32c3_v2"
version = "0.1.0"
authors = ["dragonn <dragonn@op.pl>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Base ESP deps
esp-hal = { version = "0.16.1", features = [
    "async",
    "embassy",
    "embassy-time-systick-16mhz",
    "eh1",
    "esp32c3",
    "defmt",
] }
esp-backtrace = { version = "0.11.1", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "defmt",
] }
defmt = "0.3.6"
defmt-rtt = "0.4.0"

esp-println = { version = "0.9.1", features = ["esp32c3"] }
esp-alloc = { version = "0.3.0" }
#esp-wifi  = { git = "https://github.com/esp-rs/esp-wifi/", rev = "7632e74", features = ["esp32c3", "wifi"] }

# Embeded hal
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.1.0", features = ["async"] }

static_cell = { version = "2.0.0", features = ["nightly"] }
portable-atomic = { version = "1.5", features = ["unsafe-assume-single-core"] }

# Embassy deps
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
embassy-time = { version = "0.3.0" }
embassy-embedded-hal = "=0.1.0"
embassy-sync = "0.5.0"


# OLED SSD1306 deps
sh1122 = { path = "./sh1122" }
embedded-graphics = "0.8.0"
tinybmp = "0.5.0"
embedded-text = "0.7.0"

display-interface = "0.5.0"
display-interface-spi = "0.5.0"
inverted-pin = "1.0.0"
profont = "0.7.0"

heapless = "0.8.0"

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]

[profile.release]
opt-level = "s"

[profile.dev]
opt-level = "s"
