[package]
name = "kia_obd2_esp32c3_v2"
version = "0.1.0"
authors = ["dragonn <dragonn@op.pl>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.17.0", features = [
    "async",
    "embassy",
    #"embassy-time-systick-16mhz",
    "embassy-time-timg0",
    "embassy-executor-thread",
    #"embassy-executor-interrupt",
    "embassy-integrated-timers",
    "esp32c6",
    "defmt",
    "embedded-hal-02",
    "embedded-hal",
] } # Base ESP deps
esp-hal-procmacros = { version = "0.10.0", features = ["embassy"] }
esp-backtrace = { version = "0.11.1", features = [
    "esp32c6",
    "panic-handler",
    "exception-handler",
    "defmt",
] }
riscv = "0.11.1"
defmt = "0.3.6"
#defmt-serial = "0.8.0"
#defmt-rtt = "0.4.0"

esp-println = { version = "0.9.1", features = ["esp32c6"] }
esp-alloc = { version = "0.3.0" }
#esp-wifi  = { git = "https://github.com/esp-rs/esp-wifi/", rev = "7632e74", features = ["esp32c3", "wifi"] }

# Embeded hal
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-hal-bus = { version = "0.1.0", features = ["async"] }

static_cell = { version = "2.0.0", features = ["nightly"] }
portable-atomic = { version = "1.5", features = ["unsafe-assume-single-core"] }

# Embassy deps
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",

] }
embassy-time = { version = "0.3.0" }
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-sync = "0.5.0"
critical-section = "1.1.2"


# OLED SSD1306 deps
sh1122 = { path = "./crates/sh1122" }
embedded-graphics = "0.8.0"
tinybmp = "0.5.0"
embedded-text = "0.7.0"

display-interface = { version = "0.5.0", features = ["defmt-03"] }
display-interface-spi = "0.5.0"
inverted-pin = "1.0.0"
profont = "0.7.0"

heapless = { version = "0.8.0", features = ["defmt-03"] }

# OBD2 deps
modular-bitfield = "0.11.2"
embedded-can = "0.4.1"
bitvec = { version = "1.0", default-features = false }

strum = { version = "0.26", features = ["derive"], default-features = false }
enum_dispatch = "0.3.13"
statig = { path = "./crates/statig/statig", features = ["async", "alloc"] }


[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]

[build-dependencies]
dbc-codegen = "0.3.0"

[profile.release]
opt-level = "s"
debug = 2

[profile.dev]
opt-level = "s"
