[package]
name = "ha-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9.0"
serde_cbor = { version = "0.11.2", features = ["std"] }
serde-encrypt = "0.7.0"
chrono = "0.4.38"
postcard = { version = "1.0.10", features = ["alloc", "use-std"] }
types = { path = "../types" }

toml = { version = "0.8.19" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.12"
reqwest = { version = "0.12.5", features = ["json"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls"] }
log = "0.4.14"
env_logger = "0.11.5"
futures-util = "0.3.30"
statig = { version = "0.3.0", features = ["async"] }
anyhow = "1.0.40"
thiserror = "2.0.3"
#jaq-interpret = "1.5.0"
#jaq-parse = "1.0.3"
#jaq-syn = "1.6.0"
#jaq-core = "1.5.1"
#jaq-std = "1.6.0"
#json5 = "0.4.1"
openssl-sys = { version = "*", features = ["vendored"] }

#Kia dtls connection
openssl = { version = "0.10", features = ["v111", "vendored"] }
udp-stream = "0.0.12"
tokio-openssl = "0.6.5"
tokio-dtls-stream-sink = { git = "https://github.com/drogue-iot/tokio-dtls-stream-sink" }
