[package]
name = "ha-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ha-daemon"
path = "src/daemon.rs"

[[bin]]
name = "ha-client"
path = "src/client.rs"

[dependencies]
build-time = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
serde_cbor = { version = "0.11.2", features = ["std"] }
serde-encrypt = "0.7.0"
chrono = "0.4.40"
postcard = { version = "1.1.1", features = ["alloc", "use-std"] }
types = { path = "../types", features = ["id_ha_daemon"] }

toml = { version = "0.8.20" }
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = "0.7.14"
reqwest = { version = "0.12.15", features = ["json"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls"] }
remoc = "0.15.3"
log = "0.4.26"
env_logger = "0.11.7"
futures-util = "0.3.30"
statig = { version = "0.4.1", features = ["async"] }
anyhow = "1.0.97"
thiserror = "2.0.12"
#jaq-interpret = "1.5.0"
#jaq-parse = "1.0.3"
#jaq-syn = "1.6.0"
#jaq-core = "1.5.1"
#jaq-std = "1.6.0"
#json5 = "0.4.1"
openssl-sys = { version = "*", features = ["vendored"] }

#Kia dtls connection
openssl = { version = "0.10.71", features = ["v111", "vendored"] }
udp-stream = "0.0.12"
tokio-openssl = "0.6.5"
tokio-dtls-stream-sink = { git = "https://github.com/drogue-iot/tokio-dtls-stream-sink" }
clap = { version = "4.5.34", features = ["derive"] }
