[package]
edition = "2021"
name = "embassy-nrf52840-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.2.0", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
] }
embedded-io = { version = "0.6.0", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

defmt = "0.3"
defmt-rtt = "0.4"

fixed = "1.10.0"
static_cell = { version = "2" }
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand = { version = "0.8.4", default-features = false }
embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.1", features = ["async"] }
num-integer = { version = "0.1.45", default-features = false }
ieee802154 = { version = "0.6.1", features = ["defmt"] }
byte = "0.2.7"
heapless = { version = "0.8.0", features = ["defmt-03"] }
statig = { version = "0.4.1", features = ["async"] }
embedded-alloc = "0.6.0"

[profile.release]
debug = 2
