[package]
edition = "2021"
name = "thingy91-kia-tracker"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
modem-send = []

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
#embassy = { git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "defmt"] }
#embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "4dc8007", features = ["nightly", "defmt"] }
# not need at deps update?
embassy-embedded-hal = { version = "0.2.0" }
embassy-futures = { version = "0.1.1" }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "nightly",
] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.2.0", features = [
    "defmt",
    "nrf9160-ns",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
] }
embassy-net = { version = "0.4.0", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
], optional = true }
embassy-usb = { version = "0.3.0", features = ["defmt"], optional = true }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", optional = true, features = [
    "defmt-03",
] }
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-alloc = "0.6.0"

nrf-modem = { path = "./nrf-modem", features = ["nrf9160", "defmt"] }
#nrf-modem = { git = "https://github.com/dragonnn/nrf-modem", features = [] }
#nrf-modem = { version = "0.5.1", features = ["nrf9160", "defmt"] }
tinyrlibc = { git = "https://github.com/rust-embedded-community/tinyrlibc" }

defmt = "0.3"
defmt-rtt = "0.4"

static_cell = "2.1"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
#panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
] }
futures-util = { version = "0.3.31", default-features = false }
rand = { version = "0.8.4", default-features = false }
embedded-storage = "0.3.1"

bitbybit = "1.3.2"
arbitrary-int = "1.2.7"

serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde-encrypt = { version = "0.7.0", default-features = false }
postcard = { version = "1.0.10", features = ["use-defmt"] }
embedded-msgpack = "0.3.1"
bitfield-struct = "0.9.0"

array-macro = "2.1.5"
heapless = { version = "0.8.0", features = ["defmt-03"] }

num-traits = { version = "0.2", default-features = false, features = ["libm"] }

rmodbus = { version = "*", default-features = false, features = ["heapless"] }

panic-persist = { version = "0.3.0", features = ["utf8"] }

persistent-buff = "0.2.6"

types = { path = "../types", default-features = false, features = [
    "message_id_decrement",
] }

[build-dependencies]
dotenv-build = "0.1"

[profile.dev.package.'*']
opt-level = 's'

[profile.dev]
opt-level = 's'

[profile.release]
opt-level = 's'
lto = 'fat'
debug = 2
