[package]
edition = "2021"
name = "thingy91-kia-tracker"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
modem-send = []

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
#embassy = { git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "defmt"] }
#embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "4dc8007", features = ["nightly", "defmt"] }
# not need at deps update?
embassy-embedded-hal = { version = "0.5.0" }
embassy-futures = { version = "0.1.2" }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "nightly",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.7.0", features = [
    "rt",
    "defmt",
    "nrf9160-s",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
] }
embassy-usb = { version = "0.5.1", features = ["defmt"], optional = true }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", optional = true, features = [
    "defmt-03",
] }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-alloc = "0.6.0"
nrf-pac = { version = "*", features = ["defmt"] }
#nrf9160-pac = { version = "0.12.2" }
#nrf-modem = { path = "./nrf-modem", features = ["nrf9160", "defmt"] }
nrfxlib-sys = "2.9.1"
#nrf-modem = { git = "https://github.com/dragonnn/nrf-modem", features = [] }
nrf-modem = { version = "0.8.0", features = ["nrf9160", "defmt"] }
#tinyrlibc = { git = "https://github.com/rust-embedded-community/tinyrlibc" }
tinyrlibc = "0.5.0"
#compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
#defmt-brtt = { version = "0.1.1", features = ["rtt", "bbq", "async-await"] }

static_cell = "2.1.1"
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
#panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
] }
futures-util = { version = "0.3.31", default-features = false }
rand = { version = "0.9.2", default-features = false }
embedded-storage = "0.3.1"

bitbybit = "1.4.0"
arbitrary-int = "2.0.0"

serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde-encrypt = { version = "0.7.0", default-features = false }
postcard = { version = "1.1.3", features = ["use-defmt", "use-crc"] }
crc = "3.2.1"
#embedded-msgpack = "0.3.1"
bitfield-struct = "0.11.0"
modular-bitfield = "0.12.0"

array-macro = "2.1.5"
heapless = { version = "0.9.1", features = ["defmt"] }

num-traits = { version = "0.2", default-features = false, features = ["libm"] }

panic-persist = { version = "0.3.0", features = ["utf8"] }

persistent-buff = "0.2.6"

types = { path = "../types", features = ["id_modem"] }
statig = { version = "0.4.1", features = ["async"] }
nmea0183 = "0.5.0"
derivative = { version = "2.2.0", features = ["use_core"] }

ssd1306 = { version = "0.10.0", features = ["async"] }
embedded-graphics = "0.8.1"
display-interface = { version = "0.5.0", features = ["defmt-03"] }

[build-dependencies]
dotenv-build = "0.1"

[profile.dev.package.'*']
opt-level = 's'

[profile.dev]
opt-level = 's'

[profile.release]
opt-level = 's'
lto = 'fat'
debug = 2

#[patch.crates-io]
#embassy-nrf = { git = "https://github.com/dragonnn/embassy/", branch = "nrf91_twim_errors" }
#embassy-time = { git = "https://github.com/dragonnn/embassy/", branch = "nrf91_twim_errors" }
#embassy-embedded-hal = { git = "https://github.com/dragonnn/embassy/", branch = "nrf91_twim_errors" }
#embassy-executor = { git = "https://github.com/dragonnn/embassy/", branch = "nrf91_twim_errors" }
#embassy-sync = { git = "https://github.com/dragonnn/embassy/", branch = "nrf91_twim_errors" }
