[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-encrypt = { version = "0.7.0", default-features = false }
defmt = "0.3.7"
strum = { version = "0.26", features = ["derive"], default-features = false }
postcard = { version = "1.0.10", features = ["use-crc", "alloc"] }
crc = "3.2.1"
heapless07 = { package = "heapless", version = "0.7.0", features = [] }
heapless08 = { package = "heapless", version = "0.8.0", features = [
    "defmt-03",
    "serde",
] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

egui-probe = { version = "0.8.0", optional = true, features = ["derive"] }

[features]
default = []
id_modem = []
id_obd2dashboard = []
id_ha_daemon = []
egui = ["dep:egui-probe"]
