[package]
name = "display"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics = "0.8.0"
heapless = "0.8.0"
embedded-iconoir = { version = "0.2.3", features = [
    "24px",
    "144px",
    "all-resolutions",
] }

types = { path = "../../types", features = ["id_modem"] }
statig = { path = "../../obd2-dashboard/crates/statig/statig", features = [
    "async",
    "alloc",
] }

profont = "0.7.0"

display-interface = { version = "0.5.0", features = ["defmt-03"] }
display-interface-spi = "0.5.0"

defmt = "=0.3.8"
defmt-decoder = { version = "=0.3.11", features = ["unstable"] }

serde_cbor = { version = "0.11.2", features = ["std"] }

tinybmp = "0.6.0"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

embassy-time = { version = "0.4.0", features = ["defmt", "std"] }
embassy-sync = "0.6.2"
embassy-futures = "0.1.1"
embassy-executor = { version = "0.7.0", features = [
    "arch-std",
    "executor-thread",
    "nightly",
] }
static_cell = { version = "2.0.0", features = ["nightly"] }
once_cell = { version = "1.20.2", default-features = false, features = [
    "critical-section",
] }
defmt-serial = "0.10.0"
