[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serial2-tokio = "0.1.13"
log = "0.4.22"
env_logger = "0.11.5"
cobs = "0.2.3"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
modular-bitfield = "0.11.2"