[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"

eframe = "0.31.1"
egui = "0.31.1"
remoc = { version = "0.15.3", features = [
    "full",
    "default-codec-postcard",
], default-features = false }
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"

ipc = { path = "../ipc" }
