[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"

eframe = "0.31.1"
egui = "0.31.1"
egui-probe = { version = "0.8.0", features = ["derive"] }
remoc = { version = "0.15.3", features = [
    "full",
    "default-codec-postcard",
], default-features = false }
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"

ipc = { path = "../ipc" }
types = { path = "../../../types", features = ["id_modem", "egui"] }
serde_cbor = { version = "0.11.2", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
